<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_tag_order"
            android:title="@string/tag_order"
            app:showAsAction="never">
        <menu>
            <item
                    android:id="@+id/action_tag_order_date"
                    android:title="@string/tag_order_date"/>
            <item
                    android:id="@+id/action_tag_order_name"
                    android:title="@string/tag_order_name"/>
            <item
                    android:id="@+id/action_tag_order_count"
                    android:title="@string/tag_order_count"/>
        </menu>
    </item>
    <item
            android:id="@+id/action_tag_type"
            android:title="@string/tag_type"
            app:showAsAction="never">
        <menu>
            <item
                    android:id="@+id/action_tag_type_all"
                    android:title="@string/tag_type_all"/>
            <item
                    android:id="@+id/action_tag_type_general"
                    android:title="@string/tag_type_general"/>
            <item
                    android:id="@+id/action_tag_type_artist"
                    android:title="@string/tag_type_artist"/>
            <item
                    android:id="@+id/action_tag_type_copyright"
                    android:title="@string/tag_type_copyright"/>
            <item
                    android:id="@+id/action_tag_type_character"
                    android:title="@string/tag_type_character"/>
            <item
                    android:id="@+id/action_tag_type_circle"
                    android:title="@string/tag_type_circle"/>
            <item
                    android:id="@+id/action_tag_type_faults"
                    android:title="@string/tag_type_faults"/>
        </menu>
    </item>
</menu>