<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 by onlymash <im@fiepi.me>, All rights reserved
  ~
  ~ This program is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by the Free Software
  ~ Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/about_app"
                        app:iconSpaceReserved="true">
        <Preference
                android:key="about_app_version"
                android:title="@string/about_app_version"
                android:summary="%s"
                app:iconSpaceReserved="true"/>
        <Preference
                android:key="about_app_translation"
                android:title="@string/about_app_translation"
                android:summary="@string/about_app_translation_summary"
                app:iconSpaceReserved="true"/>
        <Preference
                android:key="about_app_rate"
                android:title="@string/about_app_rate"
                app:iconSpaceReserved="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_author"
                        app:iconSpaceReserved="true">
        <Preference
                android:key="about_author_website"
                android:title="@string/about_author_website"
                android:summary="https://blog.fiepi.com"
                app:iconSpaceReserved="true"/>
        <Preference
                android:key="about_author_email"
                android:title="@string/about_author_email"
                android:summary="im@fiepi.me"
                app:iconSpaceReserved="true"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/about_feedback"
                        app:iconSpaceReserved="true">
        <Preference
                android:key="about_feedback_github"
                android:title="@string/about_feedback_github"
                android:summary="https://github.com/flexbooru/flexbooru/issues"
                app:iconSpaceReserved="true"/>
        <Preference
                android:key="about_feedback_telegram"
                android:title="@string/about_feedback_telegram"
                android:summary="https://t.me/Flexbooru"
                app:iconSpaceReserved="true"/>
        <Preference
                android:key="about_feedback_email"
                android:title="@string/about_feedback_email"
                android:summary="feedback@fiepi.me"
                app:iconSpaceReserved="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_donation"
                        app:iconSpaceReserved="true">
        <Preference
                android:key="about_donation_paypal"
                android:title="@string/about_donation_paypal"
                android:summary="https://www.paypal.me/fiepi"
                app:iconSpaceReserved="true"/>
        <Preference
                android:key="about_donation_alipay"
                android:title="@string/about_donation_alipay"
                android:summary="im@fiepi.com"
                app:iconSpaceReserved="true"/>
        <Preference
                android:key="about_donation_btc"
                android:title="@string/about_donation_btc"
                android:summary="bc1qxanfk3hc853787a9ctm28x9ff0pvcyy6vpmgpz"
                app:iconSpaceReserved="true"/>
    </PreferenceCategory>
</PreferenceScreen>