<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2019 by onlymash <im@fiepi.me>, All rights reserved
  ~
  ~ This program is free software: you can redistribute it and/or modify it under
  ~ the terms of the GNU General Public License as published by the Free Software
  ~ Foundation, either version 3 of the License, or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
  ~ FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<moe.shizuku.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">

    <moe.shizuku.preference.EditTextPreference
            android:key="booru_config_name"
            android:title="@string/booru_config_name"
            android:singleLine="true"
            android:summary="%s"
            app:iconSpaceReserved="true"/>

    <moe.shizuku.preference.PreferenceCategory
            android:title="@string/booru_config_info"
            app:iconSpaceReserved="true">
        <!--suppress AndroidElementNotAllowed -->
        <moe.shizuku.preference.SimpleMenuPreference
                android:key="booru_config_type"
                android:title="@string/booru_config_type"
                android:summary="%s"
                android:icon="@drawable/ic_class_24dp"
                android:entries="@array/booru_type_entries"
                android:entryValues="@array/booru_type_entries_values"
                android:defaultValue="danbooru"
                app:iconSpaceReserved="true"/>

        <!--suppress AndroidElementNotAllowed -->
        <moe.shizuku.preference.SimpleMenuPreference
                android:key="booru_config_scheme"
                android:title="@string/booru_config_scheme"
                android:summary="%s"
                android:icon="@drawable/ic_https_24dp"
                android:entries="@array/booru_scheme_entries"
                android:entryValues="@array/booru_scheme_entries_values"
                android:defaultValue="https"
                app:iconSpaceReserved="true"/>

        <!--suppress AndroidElementNotAllowed -->
        <onlymash.flexbooru.widget.EditTextPreference
                android:key="booru_config_host"
                android:title="@string/booru_config_host"
                android:singleLine="true"
                android:summary="%s"
                android:icon="@drawable/ic_domain_24dp"
                app:iconSpaceReserved="true"/>

        <!--suppress AndroidElementNotAllowed -->
        <onlymash.flexbooru.widget.EditTextPreference
                android:key="booru_config_hash_salt"
                android:title="@string/booru_config_hash_salt"
                android:singleLine="true"
                android:summary="%s"
                android:icon="@drawable/ic_enhanced_encryption_24dp"
                app:iconSpaceReserved="true"/>

    </moe.shizuku.preference.PreferenceCategory>

</moe.shizuku.preference.PreferenceScreen>